--- a/assets/css/stylus.scss
+++ b/assets/css/stylus.scss
@@ -1,4 +1,5 @@
 @import 'https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap';
 @import 'base/variaveis';
 @import 'base/base';
-@import 'componentes/header'
+@import 'componentes/header';
+@import 'componentes/timer'
