--- a/assets/css/stylus.css
+++ b/assets/css/stylus.css
@@ -50,33 +50,47 @@ body {
   color: #16213E;
 }
 
-.timer {
-  height: 45vh;
-  width: 45vh;
-  background-color: #16213E;
-  border-radius: 50%;
-  box-shadow: 0px 0px 0px 20px #0F3460;
+.base-timer {
+  position: relative;
+  height: 300px;
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
-.timer .timer__bar {
-  text-align: center;
+.base-timer .base-timer__svg {
+  transform: scaleX(-1);
 }
-.timer .timer__bar .timer__time {
-  display: block;
-  color: #fff;
+.base-timer .base-timer__circle {
+  fill: none;
+  stroke: none;
+}
+.base-timer .base-timer__circle .base-timer__path-elapsed {
+  stroke-width: 7px;
+  stroke: grey;
+}
+.base-timer .base-timer__circle .base-timer__path-remaining {
+  stroke-width: 7px;
+  stroke-linecap: round;
+  transform: rotate(90deg);
+  transform-origin: center;
+  transition: 1s linear all;
+  stroke: currentColor;
+}
+.base-timer .base-timer__circle .base-timer__path-remaining.green {
+  color: rgb(65, 184, 131);
+}
+.base-timer .base-timer__circle .base-timer__path-remaining.orange {
+  color: orange;
+}
+.base-timer .base-timer__circle .base-timer__path-remaining.red {
+  color: red;
+}
+.base-timer .timer {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   font-size: 5rem;
-  font-weight: 700;
-}
-.timer .timer__bar .timer__pause {
-  margin: 0 auto;
-  outline: none;
-  border: none;
-  background: none;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  display: block;
 }/*# sourceMappingURL=stylus.css.map */
