--- a/assets/css/stylus.scss
+++ b/assets/css/stylus.scss
@@ -2,4 +2,5 @@
 @import 'base/variaveis';
 @import 'base/base';
 @import 'componentes/header';
-@import 'componentes/timer'
+@import 'componentes/timer';
+@import 'componentes/settings';
