--- a/assets/css/base/_variaveis.scss
+++ b/assets/css/base/_variaveis.scss
@@ -4,4 +4,6 @@ $tertiary-colors: #E94560;
 $quaternary-color: #533483;
 $font-family:'Roboto', sans-serif;
 $font-color: #6a7d94;
+$input-color: rgb(245, 241, 241);
+
 $font-size: 1rem;
