att altura do settings

--- a/assets/css/componentes/_settings.scss
+++ b/assets/css/componentes/_settings.scss
@@ -33,8 +33,9 @@
     right: 5%;
     width: 90%;
     border-radius: 20px;
-    height: 85%;
+    height: 570px;
     background-color: #fff;
+
 
     form {
         height: 100%;
