--- a/assets/css/stylus.css
+++ b/assets/css/stylus.css
@@ -113,7 +113,7 @@ body, html {
   right: 5%;
   width: 90%;
   border-radius: 20px;
-  height: 85%;
+  height: 570px;
   background-color: #fff;
 }
 .settings form {
