--- a/assets/css/componentes/_settings.scss
+++ b/assets/css/componentes/_settings.scss
@@ -22,7 +22,12 @@
     border: none;
     background: none;
     outline: none;
-
+    .fa-solid{
+        &:before{
+            color: #fff;
+            font-size: 2rem;
+        }
+    }
 
 }
 
