--- a/assets/css/componentes/_timer.scss
+++ b/assets/css/componentes/_timer.scss
@@ -8,16 +8,21 @@
     justify-content: center;
     .base-timer__svg {
         transform: scaleX(-1);
+        background: radial-gradient($secundary-color, $primary-color), $primary-color;
+   
+        border-radius: 50%;
+        box-shadow: 
+        0px 0px 0px 15px $primary-color;
       }
     .base-timer__circle{
         fill: none;
         stroke: none;
         .base-timer__path-elapsed{
-            stroke-width: 7px;
-            stroke: grey;
+            stroke-width: 3px;
+            stroke: none;
         }
         .base-timer__path-remaining{
-            stroke-width: 7px;
+            stroke-width: 5px;
             stroke-linecap: round;
             transform: rotate(90deg);
             transform-origin: center;
@@ -43,7 +48,26 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        font-size: 5rem;
-        
+        .timer__time{
+          font-size: 5rem;
+          font-weight: 700;
+          color: #fff;
+        }
+        .timer__pause{
+          
+          border: none;
+          outline: none;
+          background: none;
+          text-transform: uppercase;
+          font-size: $font-size*1.1;
+          letter-spacing: 10px;
+          padding: 8px;
+          color: #fff;
+          font-weight: 500;
+          cursor: pointer;
+          &:hover{
+            color: rgb(248, 42, 6);
+          }
+        }
     }
 }
