--- a/assets/css/stylus.css
+++ b/assets/css/stylus.css
@@ -16,6 +16,10 @@ body, html {
   max-width: 90vw;
 }
 
+.oculto {
+  display: none;
+}
+
 .header {
   text-align: center;
   padding-top: 2rem;
@@ -61,17 +65,20 @@ body, html {
 }
 .base-timer .base-timer__svg {
   transform: scaleX(-1);
+  background: radial-gradient(#0F3460, #16213E), #16213E;
+  border-radius: 50%;
+  box-shadow: 0px 0px 0px 15px #16213E;
 }
 .base-timer .base-timer__circle {
   fill: none;
   stroke: none;
 }
 .base-timer .base-timer__circle .base-timer__path-elapsed {
-  stroke-width: 7px;
-  stroke: grey;
+  stroke-width: 3px;
+  stroke: none;
 }
 .base-timer .base-timer__circle .base-timer__path-remaining {
-  stroke-width: 7px;
+  stroke-width: 5px;
   stroke-linecap: round;
   transform: rotate(90deg);
   transform-origin: center;
@@ -93,7 +100,26 @@ body, html {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.base-timer .timer .timer__time {
   font-size: 5rem;
+  font-weight: 700;
+  color: #fff;
+}
+.base-timer .timer .timer__pause {
+  border: none;
+  outline: none;
+  background: none;
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  letter-spacing: 10px;
+  padding: 8px;
+  color: #fff;
+  font-weight: 500;
+  cursor: pointer;
+}
+.base-timer .timer .timer__pause:hover {
+  color: rgb(248, 42, 6);
 }
 
 .main {
@@ -105,6 +131,10 @@ body, html {
   border: none;
   background: none;
   outline: none;
+}
+.settings__btn .fa-solid:before {
+  color: #fff;
+  font-size: 2rem;
 }
 
 .settings {
