--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -17,3 +17,8 @@ body,html{
 .oculto{
     display: none;
 }
+@media screen and (min-width:768px) {
+    .container{
+        max-width: 45vw;
+    }
+}
