--- a/assets/css/base/_variaveis.scss
+++ b/assets/css/base/_variaveis.scss
@@ -2,7 +2,10 @@ $primary-color:#16213E;
 $secundary-color: #0F3460;
 $tertiary-colors: #E94560;
 $quaternary-color: #533483;
+$quinta-cor:rgb(65, 184, 131);
 $font-family:'Roboto', sans-serif;
+$font-family2:'Ubuntu', sans-serif;
+$font-family3:'Libre Baskerville', serif;
 $font-color: #6a7d94;
 $input-color: rgb(245, 241, 241);
 
