--- a/assets/css/componentes/_header.scss
+++ b/assets/css/componentes/_header.scss
@@ -25,7 +25,7 @@
             border-radius: 20px;
             text-decoration: none;
             color: $font-color;
-            font-size: $font-size/1.25;
+            font-size: calc($font-size / 1.25);
             font-weight: 700;
             height: 100%;
             width: 100%;
