--- a/assets/css/stylus.scss
+++ b/assets/css/stylus.scss
@@ -1,4 +1,6 @@
 @import 'https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap';
+@import 'https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500;700&display=swap';
+@import 'https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap';
 @import 'base/variaveis';
 @import 'base/base';
 @import 'componentes/header';
