--- a/assets/css/stylus.css
+++ b/assets/css/stylus.css
@@ -70,6 +70,7 @@ body {
   height: 100%;
   width: 100%;
   padding: 1rem;
+  cursor: pointer;
 }
 .header .header__nav .active {
   color: #16213E;
